// Vitest Snapshot v1

exports[`components > N8nCallout > should render additional slots correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout custom round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"code-branch\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp; <n8n-link-stub size=\\"small\\">Do something!</n8n-link-stub>
  </div>
  <n8n-link-stub theme=\\"secondary\\" size=\\"small\\" bold=\\"true\\" underline=\\"true\\" to=\\"https://n8n.io\\">Learn more</n8n-link-stub>
</div>"
`;

exports[`components > N8nCallout > should render custom theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout custom round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"code-branch\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render danger theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout danger round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"times-circle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a danger callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render info theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout info round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"info-circle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is an info callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render secondary theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout secondary round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"info-circle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render success theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout success round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"check-circle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a success callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render warning theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout warning round\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a warning callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;
